--- a/build.gradle
+++ b/build.gradle
@@ -25,7 +25,7 @@ repositories {
 
 dependencies {
 
-    implementation 'org.springframework.boot:spring-boot-starter-security'
+    ////implementation 'org.springframework.boot:spring-boot-starter-security'
 
     implementation 'org.springframework.boot:spring-boot-starter-web'
     //providedRuntime 'org.springframework.boot:spring-boot-starter-tomcat'
@@ -45,12 +45,14 @@ dependencies {
     }
 
     //implementation 'org.springframework.boot:spring-boot-starter-actuator:2.7.11'
+
     implementation 'com.jgeppert.struts2.jquery:struts2-jquery-plugin:4.0.3'
     implementation 'com.jgeppert.struts2.jquery:struts2-jquery-grid-plugin:4.0.3'
     implementation 'com.jgeppert.struts2.jquery:struts2-jquery-datatables-plugin:4.0.3'
     implementation 'com.jgeppert.struts2.jquery:struts2-jquery-richtext-plugin:4.0.3'
     implementation 'com.jgeppert.struts2.jquery:struts2-jquery-tree-plugin:4.0.3'
-    implementation('net.minidev:json-smart:2.4.10')
+    //implementation('net.minidev:json-smart:2.4.10')
+
 
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
