--- a/build.gradle
+++ b/build.gradle
@@ -1,49 +1,36 @@
 plugins {
     id 'java'
-    id 'war'
     id 'org.springframework.boot' version '2.7.0'
     id 'io.spring.dependency-management' version '1.1.0'
 }
 
-configurations.all{
-    exclude group: 'ch.qos.logback',  module: 'logback-classic'
-    exclude group: 'org.springframework.boot', module: 'spring-boot-starter-tomcat'
-}
-
-group = 'com.bofa'
-version = '1.0.0'
-sourceCompatibility = '17'
-targetCompatibility = '17'
-
-war {
-    archiveFileName = 'demo-struts.war'
-}
-
 repositories {
-    mavenCentral()
+    mavenLocal()
+    maven {
+        url = uri('https://repo.maven.apache.org/maven2/')
+    }
 }
+
+//def strutsVersion = '2.5.30'
+def strutsVersion = '6.1.2'
 
 dependencies {
+    implementation "org.springframework.boot:spring-boot-starter-security"
+    implementation "org.springframework.boot:spring-boot-starter-web"
+    implementation "org.springframework.boot:spring-boot-starter-tomcat"
+    //implementation "org.springframework.boot:spring-boot-starter-actuator"
 
-    implementation 'org.springframework.boot:spring-boot-starter-web'
-    implementation 'org.springframework.boot:spring-boot-starter-security'
-    //providedRuntime 'org.springframework.boot:spring-boot-starter-tomcat'
-    //providedRuntime 'org.apache.tomcat.embed:tomcat-embed-jasper:11.0.0-M6'
     implementation 'javax.servlet:javax.servlet-api:4.0.1'
-    implementation group: 'javax.servlet.jsp', name: 'javax.servlet.jsp-api', version: '2.3.3'
+    implementation 'javax.servlet.jsp:javax.servlet.jsp-api:2.3.3'
     implementation 'javax.servlet:jstl:1.2'
 
-    implementation group: 'org.ow2.asm', name: 'asm', version: '9.5'
+    implementation "org.apache.struts:struts2-core:${strutsVersion}"
+    implementation "org.apache.struts:struts2-spring-plugin:${strutsVersion}"
+    implementation "org.apache.struts:struts2-convention-plugin:${strutsVersion}"
+    implementation "org.apache.struts:struts2-json-plugin:${strutsVersion}"
 
-    implementation 'org.apache.struts:struts2-core:6.1.2'
-    implementation 'org.apache.struts:struts2-spring-plugin:6.1.2'
-    implementation 'org.apache.struts:struts2-json-plugin:6.1.2'
-
-    implementation ('org.apache.struts:struts2-convention-plugin:6.1.2') {
-        exclude  group: 'org.ow2.asm', module: 'asm'
-    }
-
-    //implementation 'org.springframework.boot:spring-boot-starter-actuator:2.7.11'
+    implementation 'org.apache.tomcat.embed:tomcat-embed-jasper:9.0.60'
+    implementation 'org.ow2.asm:asm:9.5'
 
     implementation 'com.jgeppert.struts2.jquery:struts2-jquery-plugin:4.0.3'
     implementation 'com.jgeppert.struts2.jquery:struts2-jquery-grid-plugin:4.0.3'
@@ -52,8 +39,25 @@ dependencies {
     implementation 'com.jgeppert.struts2.jquery:struts2-jquery-tree-plugin:4.0.3'
 
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
+    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.2'
+    testImplementation 'org.junit.jupiter:junit-jupiter-engine:5.8.2'
+    testImplementation 'org.apache.httpcomponents:httpclient:4.5.13'
 }
+
+group = 'com.bofa.demo'
+version = '1.0.0-SNAPSHOT'
+description = 'SpringBoot2 Struts 2.5.x Demo'
+java.sourceCompatibility = JavaVersion.VERSION_17
+
 
 tasks.named('test') {
     useJUnitPlatform()
+}
+
+tasks.withType(JavaCompile) {
+    options.encoding = 'UTF-8'
+}
+
+tasks.withType(Javadoc) {
+    options.encoding = 'UTF-8'
 }
