--- a/src/main/resources/struts.properties
+++ b/src/main/resources/struts.properties
@@ -1,3 +1,4 @@
 struts.convention.exclude.parentClassLoader=false
 struts.convention.action.fileProtocols=jar,code-source
 struts.devMode=true
+struts.action.extension=html
